fixing openapi schema for the multiple examples to render properly, adding put model in responses
